# pypeline

./: Dockerfile  README.md  docker-compose.yaml  hpguppi_pypeline.py  postproc_aux.py  postproc_candidate_filter.py  postproc_catch.py  postproc_cp.py  postproc_cptoml.py  postproc_filplotter.py  postproc_log.py  postproc_mv_&.py  postproc_plotter.py  postproc_rawspec.py  postproc_rm.py  postproc_setigen_validate.py  postproc_teststage.py  postproc_turboseti.py  proc_hpdaq.py  proc_test.py  process_after_obs.py  pyproject.toml  redishash.py
src/Pypeline/: __init__.py  dataclasses.py  entrypoints.py  identifier.py  log_formatter.py  redis_interface.py
test/: context_test.py  context_watcher.py  postproc_teststage.py  proc_test.py  stage_printout.py
