[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Pypeline"
version = "0.4.0"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "Python Pipeline, with a Redis interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "redis",
]

[project.scripts]
pypeline = "Pypeline:entrypoints.main"